--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
+    "start-prod": "SET NODE_ENV=production&&nodemon index.js"
   },
   "keywords": [],
   "author": "Eugene Khristo",
   "license": "ISC",
   "dependencies": {
+    "config": "^3.2.0",
     "express": "^4.17.1",
     "joi": "^14.3.1",
     "mongoose": "^5.6.5"
