--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "SET DEBUG=app:just,app:db&&nodemon index.js",
     "start-prod": "SET NODE_ENV=production&&nodemon index.js"
   },
   "keywords": [],
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "config": "^3.2.0",
+    "debug": "^4.1.1",
     "express": "^4.17.1",
     "joi": "^14.3.1",
     "mongoose": "^5.6.5"
