--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "SET DEBUG=app:just,app:db&&nodemon index.js",
+    "start": "nodemon index.js",
     "start-prod": "SET NODE_ENV=production&&nodemon index.js"
   },
   "keywords": [],
@@ -15,7 +15,8 @@
     "debug": "^4.1.1",
     "express": "^4.17.1",
     "joi": "^14.3.1",
-    "mongoose": "^5.6.5"
+    "mongoose": "^5.6.5",
+    "pug": "^2.0.4"
   },
   "devDependencies": {
     "nodemon": "^1.19.1",
